Add data persistence with Docker volume and improve token error handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,10 @@ services:
     container_name: simple-reminder
     environment:
       - DISCORD_TOKEN=${DISCORD_TOKEN}
+    volumes:
+      - reminder-data:/app/data
     restart: unless-stopped
+
+volumes:
+  reminder-data:
+    name: reminder-data
