--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,5 +29,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
+        env:
+          DISCORD_TOKEN: "dummy_token_for_testing"
         run: |
           python -m pytest tests/ -v
